--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -2761,7 +2761,7 @@
         }
 
         const isThisReturnNonAnonymousRide = (ride) => {
-            console.log('parms-->', ride);
+            //console.log('parms-->', ride);
             if (hospitals.includes(ride.Destination) && !ride.IsAnonymous) {
                 return true;
             }
