--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -968,7 +968,7 @@
              let date2present = new Date(date).toLocaleDateString('he-IL');
              swal(
              "خطأ\nשגיאה",
-             "קיימת כבר הסעה בתאריך " + date2present + " עם אותו החולה ואותן נקודות האיסוף\nيوجد سفرية بالتاريخ (التاريخ) مع نفس المريض ونفس نقطة الالتقاء",
+             "קיימת כבר הסעה בתאריך " + date2present + " עם אותו החולה בשעה זאת\nيوجد سفرية بالتاريخ (التاريخ) مع نفس المريض ونفس نقطة الالتقاء",
              "warning"
              );
         }
