--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1830,7 +1830,7 @@
 
                 swal({
                     title: " הפעולה נכשלה ,לנהג זה יש נסיעה בתאריך ובשעה שבחרת",
-                    timer: 2500,
+                    //timer: 2500,
                     type: "error",
                     showConfirmButton: false
                 });
