fix the absence error

--- a/Road to Recovery/pages/documentedAbsenceModal.html
+++ b/Road to Recovery/pages/documentedAbsenceModal.html
@@ -71,7 +71,7 @@
                                 <td class="rightCol">סיבת היעדרות <span class="redTxt">*</span></td>
                                 <td class="leftCol">
                                     <select id="DocumentAAbsence_choooseContent" onchange="">
-                                        <option value="-1">יש לבחור סיבה</option>
+                                        <option  value="" selected>יש לבחור סיבה</option>
                                         <option value="מחלה">מחלה</option>
                                         <option value='חול'>חו"ל</option>
                                         <option value="אחר">אחר</option>
