--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -476,7 +476,7 @@
                     confirmButtonText: "שחזר",
                     closeOnConfirm: false
                 }, function () {
-                    deactivateVolunteer(data.Id, 'true');
+                    deactivateVolunteer(data.DisplayName, 'true');
                     swal({
                         title: "המתנדב הפך לפעיל",
                         timer: 1000,
@@ -552,7 +552,7 @@
             });
         }
 
-        function deactivateVolunteer(id, active) {
+        function deactivateVolunteer(displayName, active) {
             checkCookie();
 
             //fixing bug with <br> tag
