--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -1739,6 +1739,8 @@
                     //$("#lastModified").val('');
 
                     $('#customerForm')[0].reset();
+                    $('#hour').val('06');
+                    $('#minute').val('00');
 
                     $('#wait').hide();
                 })
