--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -5692,7 +5692,7 @@
 
                                 <div class="row seperator">
                                     <div class="col-sm-6 text-left InLIne">
-                                        <h4>מספר הסעות מרובות שנבחרו: </h4> <h2 style="margin-inline:7px;" id="NumofRideChecksText"> 0 </h2>
+                                        <h4>מספר הסעות מסומנות שנבחרו: </h4> <h2 style="margin-inline:7px;" id="NumofRideChecksText"> 0 </h2>
                                     </div>
 
                                     <div class="col-sm-6 text-right">
