--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -89,7 +89,11 @@
             //        'excel'
             //    ]
             //});
-
+            //new feature 15/07/24 
+            $('#skipPageButton').click(function () {
+                var pageNumber = parseInt($('#skipPageInput').val());
+                tbl.page(pageNumber - 1).draw('page');
+            });
             refreshTable();
 
             //var pastePhone = document.getElementById('pastePhone');
@@ -556,6 +560,11 @@
                                     </thead>
                                     <tbody></tbody>
                                 </table>
+                                <div>
+                                    <label for="skipPageInput">עבור לעמוד:</label>
+                                    <input type="number" id="skipPageInput" min="1">
+                                    <button class="btn btn-success waves-effect w-md waves-light m-b-5" id="skipPageButton">עבור</button>
+                                </div>
                                 <div id="wait" style="display:none;width:69px;height:89px;position:absolute;top:50%;left:50%;padding:2px;">
                                     <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
                                 </div>
